phone number verified

--- a/src/Locales/Ar/translation.json
+++ b/src/Locales/Ar/translation.json
@@ -1,7 +1,9 @@
 {
     "HOME": "الصفحة الرئيسية",
     "LOGIN": "تسجيل الدخول",
+    "LOGINBUTTON": "تسجيل",
     "REGISTER": "انشاء حساب",
+    "REGISTERBUTTON": "انشاء",
     "EMAIL": "البريد الالكتروني",
     "PASSWORD": "كلمة المرور",
     "NAME": "الاسم",
